syntax = "proto3";

package types;

import "google/protobuf/timestamp.proto";

message Track {
    string id = 1;
    string title = 2;
    string author_id = 3;
    string album_id = 4;
    google.protobuf.Timestamp created_at = 5;
    int32 duration = 6;
    string avatar_url = 7;
    bool is_liked = 8;
}